// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title matches its snapshots: desktop 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PageWrapper
    isMobile={false}
    palette={
      Object {
        "gradient": "GRADIENT",
      }
    }
    title="hey! a title?"
  >
    <div
      className="child-two"
    />
  </PageWrapper>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="jsx-3336110975 gradient"
          style={
            Object {
              "background": "linear-gradient(GRADIENT)",
            }
          }
        />,
        <Connect(Loader) />,
        <Unknown
          title="Les Moffat | hey! a title?"
        />,
        <div
          className="child-two"
        />,
        <Unknown />,
        <JSXStyle
          css=".PageWrapper.jsx-3336110975{width:100%;min-height:100vh;height:100%;position:relative;margin:0;}.gradient.jsx-3336110975{width:100%;height:100%;min-height:100vh;position:absolute;margin:0;}"
          styleId="3336110975"
        />,
      ],
      "className": "jsx-3336110975 PageWrapper",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "jsx-3336110975 gradient",
          "style": Object {
            "background": "linear-gradient(GRADIENT)",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "title": "Les Moffat | hey! a title?",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "child-two",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": ".PageWrapper.jsx-3336110975{width:100%;min-height:100vh;height:100%;position:relative;margin:0;}.gradient.jsx-3336110975{width:100%;height:100%;min-height:100vh;position:absolute;margin:0;}",
          "styleId": "3336110975",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="jsx-3336110975 gradient"
            style={
              Object {
                "background": "linear-gradient(GRADIENT)",
              }
            }
          />,
          <Connect(Loader) />,
          <Unknown
            title="Les Moffat | hey! a title?"
          />,
          <div
            className="child-two"
          />,
          <Unknown />,
          <JSXStyle
            css=".PageWrapper.jsx-3336110975{width:100%;min-height:100vh;height:100%;position:relative;margin:0;}.gradient.jsx-3336110975{width:100%;height:100%;min-height:100vh;position:absolute;margin:0;}"
            styleId="3336110975"
          />,
        ],
        "className": "jsx-3336110975 PageWrapper",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "jsx-3336110975 gradient",
            "style": Object {
              "background": "linear-gradient(GRADIENT)",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "title": "Les Moffat | hey! a title?",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child-two",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": ".PageWrapper.jsx-3336110975{width:100%;min-height:100vh;height:100%;position:relative;margin:0;}.gradient.jsx-3336110975{width:100%;height:100%;min-height:100vh;position:absolute;margin:0;}",
            "styleId": "3336110975",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Title matches its snapshots: mobile 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PageWrapper
    isMobile={true}
    palette={
      Object {
        "gradient": "GRADIENT",
      }
    }
    title="hey! a title?"
  >
    <div
      className="child-one"
    />
  </PageWrapper>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="jsx-3336110975 gradient"
          style={
            Object {
              "background": "linear-gradient(GRADIENT)",
            }
          }
        />,
        <Connect(Loader) />,
        <Unknown
          title="Les Moffat | hey! a title?"
        />,
        <div
          className="child-one"
        />,
        false,
        <JSXStyle
          css=".PageWrapper.jsx-3336110975{width:100%;min-height:100vh;height:100%;position:relative;margin:0;}.gradient.jsx-3336110975{width:100%;height:100%;min-height:100vh;position:absolute;margin:0;}"
          styleId="3336110975"
        />,
      ],
      "className": "jsx-3336110975 PageWrapper",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "jsx-3336110975 gradient",
          "style": Object {
            "background": "linear-gradient(GRADIENT)",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "title": "Les Moffat | hey! a title?",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "child-one",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": ".PageWrapper.jsx-3336110975{width:100%;min-height:100vh;height:100%;position:relative;margin:0;}.gradient.jsx-3336110975{width:100%;height:100%;min-height:100vh;position:absolute;margin:0;}",
          "styleId": "3336110975",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="jsx-3336110975 gradient"
            style={
              Object {
                "background": "linear-gradient(GRADIENT)",
              }
            }
          />,
          <Connect(Loader) />,
          <Unknown
            title="Les Moffat | hey! a title?"
          />,
          <div
            className="child-one"
          />,
          false,
          <JSXStyle
            css=".PageWrapper.jsx-3336110975{width:100%;min-height:100vh;height:100%;position:relative;margin:0;}.gradient.jsx-3336110975{width:100%;height:100%;min-height:100vh;position:absolute;margin:0;}"
            styleId="3336110975"
          />,
        ],
        "className": "jsx-3336110975 PageWrapper",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "jsx-3336110975 gradient",
            "style": Object {
              "background": "linear-gradient(GRADIENT)",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "title": "Les Moffat | hey! a title?",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child-one",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": ".PageWrapper.jsx-3336110975{width:100%;min-height:100vh;height:100%;position:relative;margin:0;}.gradient.jsx-3336110975{width:100%;height:100%;min-height:100vh;position:absolute;margin:0;}",
            "styleId": "3336110975",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
